# Routing-Platform

./: .gitignore  .travis.yml  Cargo.toml  README.md  build_schema.rs  rustfmt.toml  schema  schema.yml
common/: Cargo.toml
common/src/: context.rs  lib.rs  node.rs  property.rs  schema.rs  template.rs
common/src/config/: mod.rs  node.rs  node_name.rs  property.rs
common/src/config/node/: mod.rs  multi_config_node.rs  multinodes.rs  node_data.rs  single_config_node.rs
common/src/config/property/: constraints.rs  mod.rs
common/src/error/: constraint_error.rs  format_error.rs  io_error.rs  mod.rs  property_error.rs  regex_automata_error.rs  schema_validation_error.rs  serde_error.rs
common/src/schema/: bound.rs  mod.rs  node.rs  property.rs  query.rs  template.rs  validate.rs  value.rs
common/src/schema/node/: mod.rs  multi_schema_node.rs  multinode.rs  node_locator.rs  single_schema_node.rs
common/src/schema/template/: mod.rs  regex_template.rs
common/src/schema/value/: mod.rs  range.rs
crates/command_metadata/: Cargo.toml
crates/command_metadata/src/: argument.rs  helpers.rs  impls.rs  lib.rs  macro_args.rs
crates/rp_common/: Cargo.toml
crates/rp_common/src/: command_metadata.rs  commands.rs  context.rs  helpers.rs  lib.rs  shell_mode.rs
crates/rp_common/src/error/: command_error.rs  format_error.rs  mod.rs
crates/rp_config/: Cargo.toml
crates/rp_config/src/: changeable.rs  lib.rs  node_name.rs
crates/rp_config/src/error/: constraint_error.rs  load_error.rs  mod.rs  node_creation_error.rs  property_error.rs  save_error.rs
crates/rp_config/src/node/: mod.rs  multi_config_node.rs  single_config_node.rs
crates/rp_config/src/property/: constraints.rs  mod.rs
crates/rp_config/src/save_load/: load.rs  mod.rs  save.rs
crates/rp_config/tests/: config.rs  default_queries.rs
crates/rp_config/tests/common/: mod.rs
crates/rp_core/: Cargo.toml
crates/rp_core/src/: lib.rs
crates/rp_core/src/common/: commands.rs  context.rs  mod.rs
crates/rp_core/src/config/: mod.rs  node_name.rs
crates/rp_core/src/config/node/: mod.rs  multi_config_node.rs  single_config_node.rs
crates/rp_core/src/config/property/: constraints.rs  mod.rs
crates/rp_core/src/config/save_load/: load.rs  save.rs
crates/rp_core/src/error/: constraint_error.rs  mod.rs  node_removal_error.rs  not_implemented.rs  save_error.rs  schema_validation_error.rs
crates/rp_core/src/plugin/: mod.rs
crates/rp_core/src/schema/: merge.rs  mod.rs  property.rs  query.rs  source_command.rs  validate.rs
crates/rp_core/src/schema/node/: mod.rs  multi_schema_node.rs
crates/rp_core/src/schema/node/multi_schema_node/: mod.rs  node_source.rs
crates/rp_core/src/schema/template/: mod.rs  regex_template.rs
crates/rp_core/src/schema/tests/: common.rs  mod.rs  property.rs
crates/rp_core/src/schema/value/: default_value.rs  mod.rs  range.rs
crates/rp_core/tests/: config.rs  default_queries.rs
crates/rp_core/tests/common/: mod.rs
crates/rp_error/: Cargo.toml
crates/rp_error/src/: lib.rs
crates/rp_log/: Cargo.toml
crates/rp_log/src/: lib.rs
crates/rp_plugin/: Cargo.toml
crates/rp_plugin/src/: lib.rs
crates/rp_schema/: Cargo.toml
crates/rp_schema/src/: bound.rs  lib.rs  matches.rs  merge.rs  property.rs  query.rs  validate.rs
crates/rp_schema/src/error/: io_error.rs  merge_error.rs  mod.rs  query_error.rs  regex_automata_error.rs  schema_validation_error.rs  serde_error.rs
crates/rp_schema/src/node/: mod.rs  multi_schema_node.rs  single_schema_node.rs
crates/rp_schema/src/template/: mod.rs  regex_template.rs
crates/rp_schema/src/tests/: common.rs  mod.rs  template.rs
crates/rp_schema/src/value/: default_value.rs  mod.rs  range.rs
crates/rp_shell/: Cargo.toml  build_schema.rs  debug_schema.yml  schema.yml
crates/rp_shell/src/: config_editor.rs  lib.rs  main.rs
crates/rp_shell/src/error/: command_error.rs  common_error.rs  config_editor_error.rs  general_error.rs  io_error.rs  mod.rs  shell_error.rs
crates/rp_shell/src/shell/: completions.rs  history.rs  mod.rs
crates/rp_shell/src/shell/commands/: apply.rs  configure.rs  edit.rs  exit.rs  history.rs  mod.rs  save_load.rs  show.rs
crates/rp_shell/src/shell/key_handlers/: completion.rs  editing.rs  mod.rs  navigation.rs
crates/rp_shell/tests/: config_editing.rs  config_traversal.rs
crates/rp_shell/tests/common/: mod.rs
crates/rp_system/: Cargo.toml
crates/rp_system/src/: lib.rs
crates/rp_system/src/net/: mod.rs
crates/rp_system/src/net/link/: link.rs  mod.rs
crates/strum/strum/src/: lib.rs
crates/strum/strum_macros/src/: lib.rs
crates/strum/strum_macros/src/helpers/: case_style.rs
crates/strum/strum_macros/src/macros/: enum_messages.rs
crates/strum/strum_macros/src/macros/strings/: from_string.rs
crates/strum/strum_tests/tests/: as_ref_no_strum.rs  as_ref_str.rs  display.rs  enum_count.rs  enum_discriminants.rs  enum_iter.rs  enum_message.rs  enum_props.rs  enum_variant_names.rs  from_str.rs  serialize_all.rs  to_string.rs
mock/sys/class/net/lo/: address
src/: config_editor.rs  general_error.rs  main.rs
src/error/: common_error.rs  mod.rs
src/shell/: mod.rs  shell_error.rs
src/shell/commands/: command_error.rs  configure.rs  edit.rs  exit.rs  mod.rs  show.rs
