[package]
name = "common"
version = "0.1.0"
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive", "rc"] }
serde_yaml = "0.8.9"
serde_json = "1.0"
regex-automata = "0.1"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
lazy_static = "1.3.0"
enum_dispatch = "0.1.4"
