[package]
name = "command_metadata"
version = "0.1.0"
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rp_common = { path = "../rp_common" }
syn = { version = "1.0.5", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.5"
darling = "0.10.1"
