[package]
name = "command_metadata"
version = "0.1.0"
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rp_common = { path = "../rp_common" }
syn = { version = "1.0.11", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
darling = "0.10.2"
lazy_static = "1.4.0"
anyhow = "1.0.25"
