[package]
name = "rp_config"
version = "0.1.0"
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"

[dependencies]
rp_schema = { path = "../rp_schema" }
rp_common = { path = "../rp_common" }
rp_log = { path = "../rp_log" }
enum_dispatch = "0.2.0"
anyhow = "1.0.23"
thiserror = "1.0.6"
colored = "1.9.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
