[package]
name = "rp_core"
version = "0.1.0"
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"

[dependencies]
rp_log = { path = "../rp_log" }
rp_plugin = { path = "../rp_plugin" }
enum_dispatch = "0.2.0"
anyhow = "1.0.25"
thiserror = "1.0.9"
colored = "1.9.2"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.44"
serde_yaml = "0.8.11"
chrono = { version = "0.4.10", features = ["serde"] }
flate2 = { version = "1.0.13", features = ["rust_backend"], default-features = false }
regex-automata = "0.1.8"
ordered-float = { version = "2.0.1", features = ["serde"] }
strum = "0.17.1"
strum_macros = "0.17.1"
lazy_static = "1.4.0"
libloading = "0.5.2"
