[package]
name = "rp_shell"
version = "0.1.0"
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"
build = "build_schema.rs"

[dependencies]
rp_schema = { path = "../rp_schema" }
rp_config = { path = "../rp_config" }
rp_common = { path = "../rp_common" }
rp_log = { path = "../rp_log" }
command_metadata = { path = "../command_metadata" }
enum_dispatch = "0.2"
termion = "1.5"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
strum = { version = "0.16.0", features = ["derive"] }
strum_macros = "0.16.0"
lazy_static = "1.4.0"

[build-dependencies]
rp_schema = { path = "../rp_schema" }
anyhow = "1.0"
