[package]
name = "rp_shell"
version = "0.1.0"
authors = ["Spanfile <spansdev@gmail.com>"]
edition = "2018"
build = "build_schema.rs"

[dependencies]
rp_core = { path = "../rp_core" }
rp_log = { path = "../rp_log" }
command_metadata = { path = "../command_metadata" }
enum_dispatch = "0.2.0"
termion = "1.5.4"
chrono = "0.4.10"
anyhow = "1.0.25"
thiserror = "1.0.9"
strum = { version = "0.17.1", features = ["derive"] }
strum_macros = "0.17.1"
lazy_static = "1.4.0"
futures = "0.3.1"

[build-dependencies]
rp_core = { path = "../rp_core" }
anyhow = "1.0.25"
